<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     android:padding="5dp"
        >
        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_edit"
            android:layout_toLeftOf="@+id/btn_save"
            android:background="@drawable/button_bg"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_save"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_bg"
            />

    </RelativeLayout>



    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:padding="10dp">
    <TextView
        android:id="@+id/id_order2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_id" />
    <TextView
        android:id="@+id/id_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1111"
        android:layout_toRightOf="@+id/id_order2"
        />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/time_creation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_createtime" />

        <TextView
            android:id="@+id/time_creation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/time_creation2"/>
    </RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
        <TextView
            android:id="@+id/machine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_machine" />
        <EditText
            android:id="@+id/machine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/machine2"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description" />
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/description2"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/address2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_address"
            />
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/address2"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time" />
        <EditText
            android:id="@+id/time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/time"/>
        <EditText
            android:id="@+id/time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/time1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
    <TextView
        android:id="@+id/level2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_level" />
    <EditText
        android:id="@+id/level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_toRightOf="@+id/level2"
        />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/status2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_order_state"
            />
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/status2"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/btn_more2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_more"
            android:textSize="10sp"
            android:layout_centerHorizontal="true"
            />
        <ImageButton
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:src="@drawable/icon_more"
            android:layout_toRightOf="@+id/btn_more2"
            />
    </RelativeLayout>

    <com.example.lenovo.repaircaptain.utils.MyListView
        android:scrollbars="none"
        android:id="@+id/lv_order_select"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></com.example.lenovo.repaircaptain.utils.MyListView>


</LinearLayout>

</ScrollView>