<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        >
        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="match_parent"
            android:layout_height="160dp">
        </android.support.v4.view.ViewPager>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/ll_point_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    >
        <ImageButton
            android:id="@+id/btn_create"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_create"
            android:background="@drawable/purple_bg" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="20dp"
    android:text="@string/text_create"
        android:textSize="8sp"

    />
</LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_select"
            android:background="@drawable/blue_bg" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/text_select"
                android:textSize="8sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        <ImageButton
            android:id="@+id/btn_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_locate"
            android:background="@drawable/green_bg" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/text_locate"
                android:textSize="8sp"
                />
    </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageButton
                android:id="@+id/btn_contact"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_contact"
                android:background="@drawable/yellow_bg" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/text_contact"
                android:textSize="8sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        <ImageButton
            android:id="@+id/btn_sugg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_sugg"
            android:background="@drawable/orange_bg" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/text_sugg"
                android:textSize="8sp" />
        </LinearLayout>

        </LinearLayout>





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="优秀技工"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/color_black"
        android:textSize="15sp"/>




    <ListView
        android:id="@+id/lv_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#fff">

    </ListView>


</LinearLayout>


