<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
            <!--<EditText-->
                <!--android:id="@+id/editText"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:ems="10"-->
                <!--android:inputType="textEmailAddress" />-->

            <!--<EditText-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:ems="10"-->
                <!--android:inputType="phone" />-->

            <TextView
                android:id="@+id/et_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="姓名:"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_toRightOf="@+id/et_name2"
                />
            </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/et_address2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_address"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_toRightOf="@+id/et_address2"/>

        </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/tv_located"
                    android:src="@drawable/icon_location1" />
                <TextView
                    android:id="@+id/tv_located"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="点击查看当前位置"
                    android:textColor="@color/colorPrimary"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/et_machine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_machine"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/et_machine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_toRightOf="@+id/et_machine2"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/et_description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_description"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_toRightOf="@+id/et_description2"/>
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/tv_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:textSize="20dp" />
        <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_toRightOf="@+id/tv_sp">
            <Spinner
                android:id="@+id/sp_time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_time1" />

            <Spinner
                android:id="@+id/sp_time2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_time2"
                android:layout_toRightOf="@+id/sp_time1" />
</LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/sp_level2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_level"
                android:textSize="20dp"/>

            <Spinner
                android:id="@+id/sp_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_level"
                android:layout_toRightOf="@+id/sp_level2"
                />
        </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/text_submit"
        android:textColor="@android:color/white"/>

    </RelativeLayout>
    </LinearLayout>

</ScrollView>
